--- a/css/index.css
+++ b/css/index.css
@@ -41,15 +41,17 @@
 }
 
 .cta-button__header {
-    position: relative;
-    margin: 16px auto;
+    position: absolute;
+    bottom: 50px; 
+    left: 50%; 
+    transform: translateX(-50%); 
     display: block;
     width: 255px;
     font-family: 'MuseoModerno';
     font-size: 26px;
     text-align: center;
     text-decoration: none;
-    color: black;
+    color: var(--color-text);
     background-color: var(--color-primary);
     border-radius: 20px;
     box-shadow: 0px 4px 16px rgba(0, 0, 0, 0.4);
@@ -165,11 +167,20 @@ p {
         align-items: flex-start;
     }
 
+    .cta-button__header {
+        bottom: 80px; 
+    }
+
     .map-container-img-desktop {
         display:none;
     }
 }
 
+@media screen and (min-width:730px) and (max-width:1024px) {
+    .cta-button__header {
+        bottom: 140px; 
+    }
+}
 
 @media screen and (min-width:730px)  {
     .container-header {
@@ -216,7 +227,7 @@ p {
         display: grid;
         grid-template-columns: auto auto auto;
         grid-template-rows: auto;
-        gap: 80px;
+        gap: 95px;
         width: 95vw;
         max-width: 1000px;
         margin: 16px auto;
