--- a/css/reset.css
+++ b/css/reset.css
@@ -96,6 +96,12 @@ nav a {
 
 nav a:hover {
   background-color: var(--color-secondary);
+  box-shadow: 0px 4px 16px rgba(0, 0, 0, 0.4);
+}
+
+.nav-active {
+  background-color: var(--color-secondary);
+  box-shadow: 0px 4px 16px rgba(0, 0, 0, 0.4);
 }
 
 /* Nav on different screens */
@@ -146,7 +152,7 @@ nav a:hover {
 
   nav a {
     display: inline-block;
-    padding: 0 16px;
+    padding: 16px 16px;
   }
 }
 
@@ -251,10 +257,12 @@ footer a {
   text-decoration: none;
   color: var(--color-text);
   font-family: 'MuseoModerno';
-  font-size: 1rem;
+  font-size: 1.1875rem;
+  padding: 0 16px;
 }
 
 footer a:hover {
   background-color: var(--color-secondary);
-  padding: 0 8px;
+  padding: 0 16px;
+  box-shadow: 0px 4px 16px rgba(0, 0, 0, 0.4);
 }
