--- a/css/index.css
+++ b/css/index.css
@@ -167,14 +167,12 @@ p {
         align-items: flex-start;
     }
 
+    .cta-button__header {
+        bottom: 100px;
+    }
+
     .map-container-img-desktop {
         display:none;
-    }
-}
-
-@media screen and (min-width:730px) and (max-width:1024px) {
-    .cta-button__header {
-        bottom: 140px; 
     }
 }
 
@@ -219,6 +217,10 @@ p {
         margin-top: 16px;
     }   
 
+    .cta-button__header {
+        bottom: 100px; 
+    }
+
     .horizontal {
         display: grid;
         grid-template-columns: auto auto auto;
@@ -252,5 +254,11 @@ p {
         width: 100%;
         height: 100%;
         object-fit: cover;
+    }
+}
+
+@media screen and (min-width:1024px) {
+    .cta-button__header {
+        bottom: 60px; 
     }
 }
