--- a/css/reset.css
+++ b/css/reset.css
@@ -171,9 +171,10 @@ nav a:hover {
   margin: 16px auto;
   font-family: "MuseoModerno";
   font-size: 26px;
+  font-weight: 400;
   text-align: center;
   text-decoration: none;
-  color: black;
+  color: var(--color-text);
   background-color: var(--color-primary);
   border-radius: 20px;
   box-shadow: 0px 4px 16px rgba(0, 0, 0, 0.4);
@@ -274,4 +275,20 @@ footer a:hover {
   background-color: var(--color-secondary);
   padding: 0 16px;
   box-shadow: 0px 4px 16px rgba(0, 0, 0, 0.4);
+}
+
+/* Dialog messages */ 
+#dialog {  
+  background-color: var(--color-background);
+  color: var(--color-text);
+  padding: 40px 60px;
+  border-radius: 20px;
+  border: 2px solid var(--color-primary);
+  box-shadow: 0px 4px 16px rgba(0, 0, 0, 0.4);
+ 
+  font-family: "MuseoModerno";
+  font-size: 1.1875rem;
+  font-weight: bold;
+  text-align: center;
+  transition: opacity 0.3s ease;
 }
