--- a/css/cart.css
+++ b/css/cart.css
@@ -1,6 +1,7 @@
 @import url("./reset.css");
 @import url("./variables.css");
 
+/* Order summary */
 .order-summary {
   border-radius: 20px;
   border: 2px solid var(--color-secondary);
@@ -17,7 +18,7 @@
   grid-template-columns: 2fr 1fr 1fr 1fr;
   align-items: center;
   padding: 20px;
-  gap: 10px; 
+  gap: 10px;
   margin-bottom: 10px;
   text-align: left;
   font-weight: bold;
@@ -34,7 +35,7 @@
   margin-bottom: 10px;
   padding: 20px;
   text-align: center;
-  gap: 10px; 
+  gap: 10px;
 }
 
 .order-summary div:last-child {
@@ -65,7 +66,7 @@
   background-color: var(--color-secondary);
 }
 
-.quantity-buttons{
+.quantity-buttons {
   display: flex;
   flex-direction: row;
   align-items: center;
@@ -78,28 +79,45 @@
   height: 40px;
 }
 
-/* Updated styling after adding counters*/
+/* Form */
+form {
+  display: flex;
+  flex-direction: column;
+  max-width: 600px;
+  padding: 0;
+}
+
+fieldset {
+  border: 2px solid var(--color-secondary);
+  border-radius: 20px;
+  box-shadow: 0px 4px 16px rgba(0, 0, 0, 0.4);
+  padding: 20px;
+  margin-bottom: 40px;
+}
+
+legend {
+  font-size: 1.625rem;
+}
+
+label {
+  display: block;
+}
+
+#streetnumber,
+#postalcode,
+#expiry,
+#cvc {
+  width: 50%;
+}
+
 @media (max-width: 600px) {
   .cart-header {
     display: none;
   }
-  
-  .cart-row  {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
 
-  
-}
-
-form {
-    width: 95%;
-    max-width: 600px;
-    padding: 0;
-}
-
-fieldset {
-    border: none;
-    padding: 0;
+  .cart-row {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
 }
