--- a/css/reset.css
+++ b/css/reset.css
@@ -182,6 +182,7 @@ nav a:hover {
   box-shadow: 0px 4px 16px rgba(0, 0, 0, 0.4);
   display: flex;
   justify-content: center;
+  cursor: pointer;
 }
 
 .cta-button:hover {
@@ -281,15 +282,15 @@ footer a:hover {
   box-shadow: 0px 4px 16px rgba(0, 0, 0, 0.4);
 }
 
-/* Dialog messages */ 
-#dialog {  
+/* Dialog messages */
+#dialog {
   background-color: var(--color-background);
   color: var(--color-text);
   padding: 40px 60px;
   border-radius: 20px;
   border: 2px solid var(--color-primary);
   box-shadow: 0px 4px 16px rgba(0, 0, 0, 0.4);
- 
+
   font-family: "MuseoModerno", "Lucida Sans", "Lucida Sans Regular",
     "Lucida Grande", "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
   font-size: 1.1875rem;
