--- a/css/tickets.css
+++ b/css/tickets.css
@@ -1,84 +1,117 @@
 @import url("./reset.css");
 @import url("./variables.css");
 
+/* Guided tours */
+.guided-tours {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  border: 2px solid var(--color-secondary);
+  max-width: 350px;
+  width: 95%;
+  margin: 0 auto;
+  border-radius: 20px;
+  box-shadow: 0px 4px 16px rgba(0, 0, 0, 0.4);
+  padding: 20px;
+}
+
+.guided-tours table thead th,
+.guided-tours table tbody td {
+  padding-bottom: 20px;
+}
+
 /*Table for tickets*/
 table {
-    margin: 16px auto;
-    font-family: 'Roboto+Serif', Georgia, 'Times New Roman', Times, serif;
-    font-size: 1rem;
+  margin: 16px auto;
+  font-family: "Roboto+Serif", Georgia, "Times New Roman", Times, serif;
+  font-size: 1rem;
 }
 
 table thead th {
-    font-size: larger;
+  font-size: larger;
 }
 
 /* Counter for tickets*/
 .qty-container {
-    display: flex;
-    align-items: center;
-    overflow: hidden;
-    width: fit-content;
-    border-radius: 20px;
-    font-family: "MuseoModerno", "Lucida Sans", "Lucida Sans Regular",
+  display: flex;
+  align-items: center;
+  overflow: hidden;
+  width: fit-content;
+  border-radius: 20px;
+  font-family: "MuseoModerno", "Lucida Sans", "Lucida Sans Regular",
     "Lucida Grande", "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
 }
-    
+
 .qty-count-minus,
 .qty-count-plus {
-    width: 40px;
-    height: 40px;
-    background-color: var(--color-primary);
-    color: var(--color-text);
-    font-size: 1rem;
-    font-family: inherit;
-    border: none;
-    border-radius: 20px;
-    cursor: pointer;
-        box-shadow: 0px 4px 16px rgba(0, 0, 0, 0.4);
-
+  width: 40px;
+  height: 40px;
+  background-color: var(--color-primary);
+  color: var(--color-text);
+  font-size: 1rem;
+  font-family: inherit;
+  border: none;
+  border-radius: 20px;
+  cursor: pointer;
+  box-shadow: 0px 4px 16px rgba(0, 0, 0, 0.4);
 }
 
 .qty-count-minus:hover,
 .qty-count-plus:hover {
-    background-color: var(--color-secondary);
+  background-color: var(--color-secondary);
 }
 
 .qty-count {
-    width: 40px;
-    height: 40px;
-    border: none;
-    font-size: 1rem;
-    text-align: center;
-    appearance: textfield;
-    font-family: inherit;
-    background: transparent;
-    
-
-}
-    
-.qty-count::-webkit-inner-spin-button, 
-    .qty-count::-webkit-outer-spin-button {
-    -webkit-appearance: none; 
-    margin: 0;
+  width: 40px;
+  height: 40px;
+  border: none;
+  font-size: 1rem;
+  text-align: center;
+  appearance: textfield;
+  font-family: inherit;
+  background: transparent;
 }
 
-
-
-@media screen and (min-width:750px) and (max-width:1199px) {
-    .flex {
-        display: grid;
-        grid-template-columns: 1fr 1fr;
-        gap: 16px;
-        margin: 16px auto;
-    }
+.qty-count::-webkit-inner-spin-button,
+.qty-count::-webkit-outer-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
 }
 
-@media screen and (min-width:1200px) {
-    .flex {
-        display: flex;
-        flex-direction: row;
-        justify-content: center;
-        gap: 16px;
-        margin: 16px auto;
-    }
+@media screen and (min-width: 750px) and (max-width: 1199px) {
+  .guided-tours {
+    max-width: 850px;
+  }
+
+  .flex {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 16px;
+    margin: 16px auto;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  main {
+    max-width: 1200px;
+  }
+
+  .flex {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    gap: 60px;
+    margin: 16px auto;
+    max-width: 1200px;
+  }
+
+  .guided-tours {
+    max-width: 1200px;
+    padding: 40px;
+  }
+
+  .guided-tours table thead th,
+  .guided-tours table tbody td {
+    padding-bottom: 20px;
+  }
 }
