--- a/css/reset.css
+++ b/css/reset.css
@@ -63,9 +63,16 @@ p {
 }
 
 /* header */
-header img {
+.header-logo-container {
   height: 60px;
   width: 60px;
+  overflow: hidden;
+}
+
+.header-logo-container img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
 
 header {
